# excel-to-quadra

./: .gitignore  CLAUDE.md  Installer.bat  LICENSE  Lancer.bat  README.md  pyproject.toml
config/: exemple_situation.yaml
src/excel_to_quadra/: __init__.py  cli.py  comparaison.py  config.py  format_quadra.py  moteur.py  normalisation.py
src/quadra_ecritures/: __init__.py  cli.py  config.py  format_quadra.py  moteur.py
tests/: test_comparaison.py  test_config.py  test_format_quadra.py  test_integration.py  test_moteur.py  test_normalisation.py
