[project]
name = "quadra-ecritures"
version = "1.0.0"
description = "Génération de fichiers d'import ASCII QuadraCOMPTA (Cegid) depuis des classeurs Excel de provisions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sébastien Grison" }]
dependencies = ["openpyxl>=3.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
quadra-ecritures = "quadra_ecritures.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
